2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* RtmNet/Rtm.cs: Update REST URL base. Beginning of fix for bug #562026.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Backends/Rtm/RtmPreferencesWidget.cs: Add a white EventBox to
	contain the RTM logo. Kind of ugly, but I'm willing to say we've
	fixed bug #532766.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Application.cs: Enable translator-credits string for About dialog.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Makefile.am:
	* Makefile.include:
	* RtmNet/Makefile.am: Don't hardcode gmcs; use $(GMCS) instead. Fixes
	bug #562845, patch courtesy of James Westby.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/TaskTreeView.cs: Have FilterFunc return false when the given task
	is null. Fixes crash reported in bug #526662.

	* src/Backends/Sqlite/SqliteBackend.cs: Don't try to close a null
	database.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Backends/Rtm/RtmPreferencesWidget.cs: Handle exceptions when
	trying to get an authorization URL for RTM. Fixes bug #563932.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Backends/Sqlite/SqliteBackend.cs: Implement task deletion. Fixes
	bug #551717, patch courtesy of Andreia Gaita and Stefan Schlott.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/TaskWindow.cs: Don't try to create a new TaskWindow if the backend
	is not yet set. Fixes bug #564344.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Preferences.cs: If the prefrences file is invalid, recreate it.
	Fixes bug #562729.

2008-11-18  Steve Frécinaux  <code@istique.net>

	* src/Backends/Sqlite/SqliteTask.cs:
	* src/Backends/Sqlite/SqliteNote.cs: Implement Notes support for the
	SQLite backend (Bug 561430)

2008-10-27  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/tasque.in: